migration/um-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: um-svc
spec:
  selector:
    app: um-service
  ports:
  - name: traffic
    port: 9000
    targetPort: 9000
    protocol: TCP
  type: ClusterIP
