migration/um-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: um-service
spec:
  ingressClassName: nginx
  rules:
  - host: um-service.s9.devopscloud.link
    http:
      paths:
      - backend:
          service:
            name: um-svc
            port:
              number: 9000
        path: /
        pathType: Prefix
